tests/neg/objects/update-00.ts

/*@ foo :: ({ x: number }) => { void | 0 < 1} */ 
function foo(o) {
  o.y = "aaa";
}
